--- a/index.html
+++ b/index.html
@@ -1,125 +1,165 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>共有リアルタイム多重カウントダウンタイマー (Firebase + 自動ログ保存版)</title>
-<style>
-  body{background:#fff;color:#000;font-family:system-ui, -apple-system, Segoe UI, Roboto, Arial;margin:0;padding:0;}
-  header{position:sticky;top:0;background:#fff;border-bottom:2px solid #001f3f;padding:10px;z-index:10;}
-  .toolbar{display:flex;flex-wrap:wrap;gap:8px;align-items:center;}
-  button{border:2px solid #001f3f;background:#fff;color:#001f3f;border-radius:8px;padding:5px 6px;font-weight:600;cursor:pointer;min-width:50px;font-size:13px;}
-  button:disabled{border-color:#ccc;color:#aaa;cursor:not-allowed;}
-  .btn-blue{background:#007BFF;border-color:#007BFF;color:#fff;}
-  .list{display:grid;grid-auto-flow:column;grid-auto-columns:min-content;gap:16px;padding:16px;}
-  .column{display:flex;flex-direction:column;gap:16px;}
-  .timer{border:2px solid #001f3f;border-radius:10px;padding:10px;display:flex;flex-direction:column;gap:8px;width:300px;}
-  .timer input[type=text]{border:1px solid #001f3f;border-radius:6px;padding:3px;width:100%;font-size:15px;}
-  .time{font-variant-numeric:tabular-nums;font-size:34px;font-weight:800;text-align:center;margin:10px 0;}
-  .presets{display:flex;justify-content:center;gap:6px;flex-wrap:nowrap;}
-  .progress{width:100%;height:10px;background:#eee;border:1px solid #001f3f;border-radius:5px;overflow:hidden;}
-  .bar{height:100%;width:0;background:#001f3f;transition:width .3s;}
-</style>
-</head>
-<body>
-<header>
-  <div class="toolbar">
-    <button id="addTimer" class="btn-blue">＋ 新規タイマー</button>
-    <button id="enableSound" class="btn-blue">音を有効化/テスト</button>
-    <button id="resetAll" class="btn-blue">全体リセット</button>
-  </div>
-</header>
-<main>
-  <div class="list" id="list"></div>
-</main>
 <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-  import { getDatabase, ref, set, onValue, push, update, remove } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+import { getDatabase, ref, set, onValue, push, update, remove } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyCSIIPz6Q8RRH1ijLcU-SD74IWk10lt2Uk",
-    authDomain: "multi-timer-share.firebaseapp.com",
-    projectId: "multi-timer-share",
-    storageBucket: "multi-timer-share.firebasestorage.app",
-    messagingSenderId: "619054972489",
-    appId: "1:619054972489:web:ee1a5ad15da335f2e68998",
-    databaseURL: "https://multi-timer-share-default-rtdb.asia-southeast1.firebasedatabase.app"
-  };
+const firebaseConfig = {
+  apiKey: "AIzaSyCSIIPz6Q8RRH1ijLcU-SD74IWk10lt2Uk",
+  authDomain: "multi-timer-share.firebaseapp.com",
+  projectId: "multi-timer-share",
+  storageBucket: "multi-timer-share.firebasestorage.app",
+  messagingSenderId: "619054972489",
+  appId: "1:619054972489:web:ee1a5ad15da335f2e68998",
+  databaseURL: "https://multi-timer-share-default-rtdb.asia-southeast1.firebasedatabase.app"
+};
 
-  const app = initializeApp(firebaseConfig);
-  const db = getDatabase(app);
+const app = initializeApp(firebaseConfig);
+const db = getDatabase(app);
 
-  const list=document.getElementById('list');
-  const addBtn=document.getElementById('addTimer');
-  const enableSoundBtn=document.getElementById('enableSound');
-  const resetAllBtn=document.getElementById('resetAll');
-  let timers={};
-  let audioCtx=null;let unlocked=false;let beepInterval=null;
+const list = document.getElementById('list');
+const addBtn = document.getElementById('addTimer');
+let timers = {};
+let initialTimes = {}; // 各タイマーの初期設定時間を保持
 
-  function ensureAudio(){if(!audioCtx){try{audioCtx=new (window.AudioContext||window.webkitAudioContext)();}catch(e){}}else if(audioCtx.state==='suspended'){audioCtx.resume();}unlocked=!!audioCtx;return audioCtx;}
-  function beepPattern(){const ctx=ensureAudio();if(!ctx)return;const base=ctx.currentTime;const pattern=[1000,1200,1000,1200,1000];pattern.forEach((f,i)=>{const o=ctx.createOscillator();const g=ctx.createGain();o.type='square';o.frequency.setValueAtTime(f,base+i*0.2);g.gain.setValueAtTime(0.001,base+i*0.2);g.gain.exponentialRampToValueAtTime(0.2,base+i*0.21);g.gain.exponentialRampToValueAtTime(0.0001,base+i*0.32);o.connect(g).connect(ctx.destination);o.start(base+i*0.2);o.stop(base+i*0.33);});}
-  function startRepeatingBeep(){stopRepeatingBeep();beepPattern();beepInterval=setInterval(beepPattern,2000);}
-  function stopRepeatingBeep(){if(beepInterval){clearInterval(beepInterval);beepInterval=null;}}
+function logEvent(action, detail="") {
+  const ts = new Date().toISOString();
+  push(ref(db, 'logs'), { action, detail, timestamp: ts });
+}
 
-  enableSoundBtn.addEventListener('click',()=>{ensureAudio();beepPattern();});
+function fmt(sec) {
+  const h = Math.floor(sec / 3600);
+  const m = Math.floor((sec % 3600) / 60);
+  const s = sec % 60;
+  return `${String(h).padStart(2,'0')}:${String(m).padStart(2,'0')}:${String(s).padStart(2,'0')}`;
+}
 
-  function logEvent(action, detail=""){const ts=new Date().toISOString();push(ref(db,'logs'),{action,detail,timestamp:ts});}
-  function fmt(sec){const h=Math.floor(sec/3600),m=Math.floor((sec%3600)/60),s=sec%60;return `${String(h).padStart(2,'0')}:${String(m).padStart(2,'0')}:${String(s).padStart(2,'0')}`;}
+function render() {
+  list.innerHTML = '';
+  const arr = Object.values(timers);
+  const cols = Math.ceil(arr.length / 5);
+  for (let c = 0; c < cols; c++) {
+    const col = document.createElement('div');
+    col.className = 'column';
+    arr.slice(c * 5, c * 5 + 5).forEach(t => col.appendChild(renderTimer(t)));
+    list.appendChild(col);
+  }
+  updateBars();
+}
 
-  function render(){list.innerHTML='';const arr=Object.values(timers);const cols=Math.ceil(arr.length/5);for(let c=0;c<cols;c++){const col=document.createElement('div');col.className='column';arr.slice(c*5,c*5+5).forEach(t=>col.appendChild(renderTimer(t)));list.appendChild(col);}updateBars();}
-
-  function renderTimer(t){const d=document.createElement('div');d.className='timer';d.dataset.id=t.id;d.innerHTML=`
+function renderTimer(t) {
+  const d = document.createElement('div');
+  d.className = 'timer';
+  d.dataset.id = t.id;
+  d.innerHTML = `
     <input type="text" class="js-name" value="${t.name}">
     <div class="time js-time">${fmt(t.remain)}</div>
-    <div class="presets">${[['+1h',3600],['+10min',600],['+5min',300],['+1min',60]].map(([l,s])=>`<button class='btn-blue js-extend' data-sec='${s}'>${l}</button>`).join('')}</div>
-    <div class="presets">${[['+10sec',10],['+5sec',5],['+1sec',1]].map(([l,s])=>`<button class='btn-blue js-extend' data-sec='${s}'>${l}</button>`).join('')}<button class='js-reset'>再設定</button></div>
+    <div class="presets">
+      ${[['+1h',3600],['+10min',600],['+5min',300],['+1min',60]].map(([l,s])=>`<button class='btn-blue js-extend' data-sec='${s}'>${l}</button>`).join('')}
+    </div>
+    <div class="presets">
+      ${[['+10sec',10],['+5sec',5],['+1sec',1]].map(([l,s])=>`<button class='btn-blue js-extend' data-sec='${s}'>${l}</button>`).join('')}
+      <button class='js-reset'>再設定</button>
+    </div>
     <div class="progress"><div class="bar js-bar"></div></div>
-    <div class="presets"><button class='js-start'>Start</button><button class='js-pause'>Pause</button><button class='js-reset2'>Reset</button><button class='js-delete'>Delete</button></div>`;
+    <div class="presets">
+      <button class='js-start'>Start</button>
+      <button class='js-pause'>Pause</button>
+      <button class='js-resetInit'>Reset</button>
+      <button class='js-delete'>Delete</button>
+    </div>`;
+  
+  d.querySelector('.js-name').addEventListener('change',e=>updateTimer(t.id,{name:e.target.value}));
+  d.querySelectorAll('.js-extend').forEach(b=>b.addEventListener('click',()=>extendTimer(t.id,Number(b.dataset.sec))));
+  d.querySelector('.js-reset').addEventListener('click',()=>resetZero(t.id));
+  d.querySelector('.js-resetInit').addEventListener('click',()=>resetInit(t.id));
+  d.querySelector('.js-start').addEventListener('click',()=>startTimer(t.id));
+  d.querySelector('.js-pause').addEventListener('click',()=>pauseTimer(t.id));
+  d.querySelector('.js-delete').addEventListener('click',()=>deleteTimer(t.id));
+  return d;
+}
 
-    d.querySelector('.js-name').addEventListener('change',e=>updateTimer(t.id,{name:e.target.value}));
-    d.querySelectorAll('.js-extend').forEach(b=>b.addEventListener('click',()=>extendTimer(t.id,Number(b.dataset.sec))));
-    d.querySelector('.js-reset').addEventListener('click',()=>resetToZero(t.id));
-    d.querySelector('.js-reset2').addEventListener('click',()=>resetToOriginal(t.id));
-    d.querySelector('.js-start').addEventListener('click',()=>startTimer(t.id));
-    d.querySelector('.js-pause').addEventListener('click',()=>pauseTimer(t.id));
-    d.querySelector('.js-delete').addEventListener('click',()=>deleteTimer(t.id));
-
-    return d;}
-
-  function updateBars(){document.querySelectorAll('.timer').forEach(box=>{const id=box.dataset.id;const t=timers[id];if(!t)return;box.querySelector('.js-time').textContent=fmt(t.remain);const bar=box.querySelector('.js-bar');const pct=t.total>0?Math.max(0,Math.min(100,(1-(t.remain/t.total))*100)):0;bar.style.width=pct+'%';box.querySelectorAll('.js-extend').forEach(b=>b.disabled=t.running);});}
-
-  function newTimerObj(sec){const id=push(ref(db,'timers')).key;return{id,name:'タイマー',total:sec,remain:sec,original:sec,running:false,startTime:null,lastUpdate:Date.now()};}
-
-  function addTimer(){const v=prompt('タイマー時間を入力 (例: 1h, 3m, 90s, 120)');if(v===null)return;const sec=parseDuration(v);if(!sec){alert('正しい値を入力してください');return;}const t=newTimerObj(sec);set(ref(db,'timers/'+t.id),t);logEvent('Create',`${t.name} total=${t.total}s`);}
-  function parseDuration(text){if(!text)return null;const t=text.trim();const mm=t.match(/(\d+)m/i);const ss=t.match(/(\d+)s/i);let sec=0;if(mm)sec+=parseInt(mm[1])*60;if(ss)sec+=parseInt(ss[1]);if(!mm&&!ss)sec=parseInt(t)||0;return sec>0?sec:null;}
-
-  function updateTimer(id,data){update(ref(db,'timers/'+id),data);}
-  function extendTimer(id,sec){const t=timers[id];if(!t||t.running)return;updateTimer(id,{remain:t.remain+sec,total:t.total+sec});logEvent('Extend',`${t.name} +${sec}s`);}
-  function resetToZero(id){const t=timers[id];if(!t)return;if(!confirm(`「${t.name}」を0:00に戻しますか？`))return;updateTimer(id,{remain:0,running:false});logEvent('ResetZero',t.name);}
-  function resetToOriginal(id){const t=timers[id];if(!t)return;if(!confirm(`「${t.name}」を初期 ${fmt(t.original)} に戻します。よろしいですか？`))return;updateTimer(id,{remain:t.original,total:t.original,running:false});logEvent('ResetOriginal',t.name);}
-  function startTimer(id){const t=timers[id];if(!t||t.running)return;updateTimer(id,{running:true,startTime:Date.now(),lastUpdate:Date.now()});logEvent('Start',t.name);}
-  function pauseTimer(id){const t=timers[id];if(!t||!t.running)return;updateTimer(id,{running:false,lastUpdate:Date.now(),total:t.remain});logEvent('Pause',t.name);}
-  function deleteTimer(id){if(!confirm('削除しますか？'))return;remove(ref(db,'timers/'+id));logEvent('Delete',id);}
-
-  resetAllBtn.addEventListener('click',()=>{if(!confirm('全てのタイマーを削除しますか？'))return;remove(ref(db,'timers'));logEvent('ResetAll','全体削除');});
-
-  onValue(ref(db,'timers'),snap=>{
-    const now=Date.now();
-    timers=snap.val()||{};
-    Object.values(timers).forEach(t=>{
-      if(t.running&&t.startTime){
-        const elapsed=Math.floor((now-t.startTime)/1000);
-        const newRemain=Math.max(0,t.total-elapsed);
-        if(newRemain!==t.remain){updateTimer(t.id,{remain:newRemain});}
-        if(newRemain===0&&!t.alerted){startRepeatingBeep();updateTimer(t.id,{alerted:true});logEvent('Completed',t.name);}
-      }
-    });
-    render();
+function updateBars() {
+  document.querySelectorAll('.timer').forEach(box => {
+    const id = box.dataset.id;
+    const t = timers[id];
+    if (!t) return;
+    box.querySelector('.js-time').textContent = fmt(t.remain);
+    const bar = box.querySelector('.js-bar');
+    const pct = t.total > 0 ? Math.max(0, Math.min(100, (1 - (t.remain / t.total)) * 100)) : 0;
+    bar.style.width = pct + '%';
+    box.querySelectorAll('.js-extend').forEach(b => b.disabled = t.running);
   });
+}
 
-  setInterval(()=>{updateBars();},1000);
+function newTimerObj(sec) {
+  const id = push(ref(db, 'timers')).key;
+  initialTimes[id] = sec;
+  return { id, name: 'タイマー', total: sec, remain: sec, running: false, startTime: null };
+}
 
-  addBtn.addEventListener('click',addTimer);
+function addTimer() {
+  const v = prompt('タイマー時間を入力 (例: 1h, 3m, 90s, 120)');
+  if (v === null) return;
+  const sec = parseDuration(v);
+  if (!sec) { alert('正しい値を入力してください'); return; }
+  const t = newTimerObj(sec);
+  set(ref(db, 'timers/' + t.id), t);
+  logEvent('Create', `${t.name} total=${t.total}s`);
+}
+
+function parseDuration(text) {
+  if (!text) return null;
+  const t = text.trim();
+  const mm = t.match(/(\d+)m/i);
+  const ss = t.match(/(\d+)s/i);
+  let sec = 0;
+  if (mm) sec += parseInt(mm[1]) * 60;
+  if (ss) sec += parseInt(ss[1]);
+  if (!mm && !ss) sec = parseInt(t) || 0;
+  return sec > 0 ? sec : null;
+}
+
+function updateTimer(id, data) { update(ref(db, 'timers/' + id), data); }
+function extendTimer(id, sec) {
+  const t = timers[id];
+  if (!t || t.running) return;
+  t.total += sec; t.remain += sec;
+  updateTimer(id, { total: t.total, remain: t.remain });
+}
+function resetZero(id) { updateTimer(id, { remain: 0, running: false }); }
+function resetInit(id) {
+  const init = initialTimes[id];
+  if (init != null) updateTimer(id, { remain: init, total: init, running: false });
+}
+function startTimer(id) {
+  const t = timers[id];
+  if (!t || t.running) return;
+  updateTimer(id, { running: true, startTime: Date.now() });
+}
+function pauseTimer(id) { updateTimer(id, { running: false }); }
+function deleteTimer(id) { remove(ref(db, 'timers/' + id)); }
+
+onValue(ref(db, 'timers'), snap => {
+  timers = snap.val() || {};
+  render();
+});
+
+// 🔁 ローカル描画更新（1秒ごと）
+setInterval(() => {
+  Object.values(timers).forEach(t => {
+    if (t.running && t.remain > 0) {
+      t.remain--;
+      updateBars();
+      if (t.remain <= 0) logEvent('Completed', t.name);
+    }
+  });
+}, 1000);
+
+// 🔁 Firebase 同期（10秒ごと）
+setInterval(() => {
+  Object.values(timers).forEach(t => {
+    update(ref(db, 'timers/' + t.id), { remain: t.remain });
+  });
+}, 10000);
+
+addBtn.addEventListener('click', addTimer);
 </script>
-</body>
-</html>
